[tool.poetry]
name = "domino-api"
version = "0.1.0"
description = ""
authors = ["migue <miguel.lau@etecsa.cu>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
alembic = "^1.9.3"
psycopg2-binary = "^2.9.5"
itsdangerous = "^2.1.2"
passlib = "^1.7.4"
FastAPI-SQLAlchemy = "^0.2.1"
python-dotenv = "^0.21.1"
PyJWT = "^2.6.0"
pyi18n-v2 = "^1.1.0"
autopep8 = "^2.0.1"
pydantic = {extras = ["email"], version = "^1.10.4"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
